style good, carousel needs button

--- a/about.html
+++ b/about.html
@@ -47,7 +47,7 @@
             <div class="black hoverable z-depth-3 about-container">
                 <div class="row">
                 <div class="about-pic">
-                    <div class="col s4 offset-s4">
+                    <div class="col s6 offset-s3">
                         <img src="assets/images/self-sidenav.png" alt="Katherine White" class="responsive-img circle">
                     </div>
                 </div>
@@ -57,13 +57,9 @@
                 <div class="card-panel black" id="aboutCard">
                     <div class="row">
                         <div class="card-content" id="aboutText">
-                            <p class="white-text">Katherine is a passionate fullstack developer skilled in
-                                the latest front and back-end technologies. She has an eye for design and a
-                                love for data; thrives on a team but is also content working independently.
-                                She is a natural leader and an avid learner, and continually seeks new
-                                knowledge to apply to projects and tasks. She also has an inordinate
-                                fascination with llamas and has been known to track down llama and alpaca
-                                farms near the beautiful Denver, CO, where she resides.</p>
+                            <p class="white-text">Katherine is a Fullstack Developer based in Denver, CO and skilled in
+                                the latest front and back-end technologies. She has an eye for design, a
+                                love for data, and a passion for lifelong learning.</p>
                         </div>
                     </div>
                 </div>
@@ -74,12 +70,12 @@
 
         <!-- Floating Action Button-->
         <div class="fixed-action-btn">
-            <a href="index.html" class="btn-floating btn-large home">
+            <a href="index.html" class="btn-floating home">
                 <i class="large fas fa-home"></i>
             </a>
         </div>
 
-        </div>
+
 
 
         </div>
