--- a/projects.html
+++ b/projects.html
@@ -14,6 +14,7 @@
   <link rel="stylesheet" type="text/css" media="screen" href="assets/css/reset.css" />
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
   <link rel="stylesheet" type="text/css" media="screen" href="assets/css/style.css" />
+  <link rel="stylesheet" type="text/css" media="screen" href="assets/css/projects.css" />
 
 
 </head>
@@ -42,41 +43,70 @@
 
 
     <!-- Main Content -->
-    <div class="row">
+    <!-- <div class="resp-container">
+      <div class="resp-imgs">
+    -->
 
-      <div class="row">
-        <div class="black hoverable z-depth-3 resp-container">
-          <div class="resp-text">
 
-            <div class="col s12">
-              <h1 class="name">katherine white</h1>
+    <div class="carousel carousel-slider center">
 
-              <div class="row">
-                <div class="col s12">
-                  <h2 class="jobTitle">Full<br>Stack<br>Developer</h2>
-                </div>
-              </div>
+      <!-- <div class="carousel-fixed-item center">
+        <a class="btn waves-effect white grey-text darken-text-2" id="demoBtn">DEMO</a>
+      </div> -->
 
-            </div>
-          </div>
+      <div class="carousel-item white-text z-depth-3" id="one" href="https://dirkcallaway.github.io/Concerts-Cuisine/">
+        <h2>Concerts & Cuisine</h2>
+        <div class="carousel-fixed-item center">
+          <img src="assets/images/CC.png" class="z-depth-2" style="height: 347px; width: 300px" alt="C&C App">
         </div>
+        <p class="white-text">Collaborative Project. JS & MaterializeCSS</p>
       </div>
+
+      <div class="carousel-item white-text z-depth-3" id="two" href="https://obscure-bastion-10259.herokuapp.com/">
+        <h2>Eat-Da-Burger</h2>
+        <div class="carousel-fixed-item center">
+          <img src="assets/images/Burger.png" class="z-depth-2" style="height: 347px; width: 300px" alt="Burger App">
+        </div>
+        <p class="white-text">Fullstack JS App. Veggie Friendly</p>
+      </div>
+
+      <div class="carousel-item white-text z-depth-3" id="three" href="https://radiant-citadel-94515.herokuapp.com/">
+        <h2>Friend Finder</h2>
+        <div class="carousel-fixed-item center">
+          <img src="assets/images/FriendFinder.png" class="z-depth-2" style="height: 347px; width: 300px" alt="FF App">
+        </div>
+        <p class="white-text">Lonely? Find a Friend. Includes Dogs.</p>
+      </div>
+
+      <div class="carousel-item white-text z-depth-3" id="four" href="https://drive.google.com/file/d/126RF6BhyMs-2c5pKn6rYWaxOYH0EE2QI/view?usp=sharing">
+        <h2>LIRI</h2>
+        <div class="carousel-fixed-item center">
+          <img src="assets/images/LIRI.png" class="z-depth-2" style="height: 347px; width: 300px" alt="FF App">
+        </div>
+        <p class="white-text">SIRI, but not; Node.js</p>
+      </div>
+
+      <div class="carousel-item white-text z-depth-3" id="five" href="https://drive.google.com/file/d/1HI2fn3qL3xg7GWDsD899PqVRSSkCxRN7/view">
+        <h2>Bamazon</h2>
+        <div class="carousel-fixed-item center">
+            <img src="assets/images/Bamazon.png" class="z-depth-2" style="height: 347px; width: 300px" alt="FF App">
+          </div>
+        <p class="white-text">Node.js Storefront; MySQL</p>
+      </div>
+
+
+      <!-- </div>
+        
+    
+
+            </div> -->
+
 
       <!-- Floating Action Button-->
       <div class="fixed-action-btn">
-        <a class="btn-floating btn-large contact">
-          <i class="large fas fa-user-plus"></i>
+        <a href="index.html" class="btn-floating home">
+          <i class="large fas fa-home"></i>
         </a>
-        <ul>
-          <li><a class="btn-floating email" href="mailto:katiewhite303@gmail.com?Subject=Inquiry" target="_top"><i
-                class="far fa-envelope"></i></a></li>
-          <li><a class="btn-floating github" href="https://github.com/k8blanco" target="_blank"><i class="fab fa-github"></i></a></li>
-          <li><a class="btn-floating resume" href="https://docs.google.com/document/d/1oj4fceJ3kBA28p8bTujelqkgblZPE-_zoVXRME4rG64/edit?usp=sharing"
-              target="_blank"><i class="fas fa-file"></i></a></li>
-          <li><a class="btn-floating linkedIn" href="https://www.linkedin.com/in/katherine-white-274877a/" target="_blank"><i
-                class="fab fa-linkedin-in"></i></a></li>
-          <!-- <li><a class="btn-floating linkedIn" href="tel:+1-720-340-2659"><i class="fab fa-linkedin-in"></i></a></li> -->
-        </ul>
       </div>
 
     </div>
