playing with the button

--- a/projects.html
+++ b/projects.html
@@ -50,9 +50,9 @@
 
     <div class="carousel carousel-slider center">
 
-      <!-- <div class="carousel-fixed-item center">
+      <div class="carousel-fixed-item center">
         <a class="btn waves-effect white grey-text darken-text-2" id="demoBtn">DEMO</a>
-      </div> -->
+      </div>
 
       <div class="carousel-item white-text z-depth-3" id="one" href="https://dirkcallaway.github.io/Concerts-Cuisine/">
         <h2>Concerts & Cuisine</h2>
