demo button link test

--- a/projects.html
+++ b/projects.html
@@ -51,8 +51,10 @@
     <div class="carousel carousel-slider center">
 
       <div class="carousel-fixed-item center">
-        <a class="btn waves-effect white grey-text darken-text-2" id="demoBtn">DEMO</a>
+        <a class="submit btn waves-effect white grey-text darken-text-2" id="demoBtn" href="">DEMO</a>
       </div>
+<!-- 
+      <a class="btn waves-effect" id="demoBtn">DEMO</a> -->
 
       <div class="carousel-item white-text z-depth-3" id="one" href="https://dirkcallaway.github.io/Concerts-Cuisine/">
         <h2>Concerts & Cuisine</h2>
