--- a/projects.html
+++ b/projects.html
@@ -47,14 +47,12 @@
       <div class="resp-imgs">
     -->
 
-
+    <div class="container">
     <div class="carousel carousel-slider center">
 
-      <div class="carousel-fixed-item center">
-        <a class="submit btn waves-effect white grey-text darken-text-2" id="demoBtn" href="">DEMO</a>
-      </div>
-<!-- 
-      <a class="btn waves-effect" id="demoBtn">DEMO</a> -->
+      <!-- <div class="carousel-fixed-item center">
+        <a class="btn waves-effect" id="demoBtn">DEMO</a>
+      </div> -->
 
       <div class="carousel-item white-text z-depth-3" id="one" href="https://dirkcallaway.github.io/Concerts-Cuisine/">
         <h2>Concerts & Cuisine</h2>
@@ -96,7 +94,7 @@
         <p class="white-text">Node.js Storefront; MySQL</p>
       </div>
 
-
+    </div>
       <!-- </div>
         
     
