--- a/projects.html
+++ b/projects.html
@@ -57,7 +57,7 @@
       <div class="carousel-item white-text z-depth-3" id="one" href="https://dirkcallaway.github.io/Concerts-Cuisine/">
         <h2>Concerts & Cuisine</h2>
         <div class="carousel-fixed-item center">
-          <img src="assets/images/CC.png" class="z-depth-2" style="height: 347px; width: 300px" alt="C&C App">
+          <img src="assets/images/CC1.png" class="responsive-img z-depth-2" style="max-height: 320px" alt="C&C App">
         </div>
         <p class="white-text">Collaborative Project. JS & MaterializeCSS</p>
       </div>
@@ -65,7 +65,7 @@
       <div class="carousel-item white-text z-depth-3" id="two" href="https://obscure-bastion-10259.herokuapp.com/">
         <h2>Eat-Da-Burger</h2>
         <div class="carousel-fixed-item center">
-          <img src="assets/images/Burger.png" class="z-depth-2" style="height: 347px; width: 300px" alt="Burger App">
+          <img src="assets/images/Burger1.png" class="responsive-img z-depth-2" style="max-height: 320px" alt="Burger App">
         </div>
         <p class="white-text">Fullstack JS App. Veggie Friendly</p>
       </div>
@@ -73,7 +73,7 @@
       <div class="carousel-item white-text z-depth-3" id="three" href="https://radiant-citadel-94515.herokuapp.com/">
         <h2>Friend Finder</h2>
         <div class="carousel-fixed-item center">
-          <img src="assets/images/FriendFinder.png" class="z-depth-2" style="height: 347px; width: 300px" alt="FF App">
+          <img src="assets/images/Friend1.png" class="responsive-img z-depth-2" style="max-height: 320px" alt="FF App">
         </div>
         <p class="white-text">Lonely? Find a Friend. Includes Dogs.</p>
       </div>
@@ -81,7 +81,7 @@
       <div class="carousel-item white-text z-depth-3" id="four" href="https://drive.google.com/file/d/126RF6BhyMs-2c5pKn6rYWaxOYH0EE2QI/view?usp=sharing">
         <h2>LIRI</h2>
         <div class="carousel-fixed-item center">
-          <img src="assets/images/LIRI.png" class="z-depth-2" style="height: 347px; width: 300px" alt="FF App">
+          <img src="assets/images/LIRI1.png" class="responsive-img z-depth-2" style="max-height: 320px" alt="FF App">
         </div>
         <p class="white-text">SIRI, but not; Node.js</p>
       </div>
@@ -89,7 +89,7 @@
       <div class="carousel-item white-text z-depth-3" id="five" href="https://drive.google.com/file/d/1HI2fn3qL3xg7GWDsD899PqVRSSkCxRN7/view">
         <h2>Bamazon</h2>
         <div class="carousel-fixed-item center">
-            <img src="assets/images/Bamazon.png" class="z-depth-2" style="height: 347px; width: 300px" alt="FF App">
+            <img src="assets/images/Bamazon1.png" class="responsive-img z-depth-2" style="max-height: 320px" alt="FF App">
           </div>
         <p class="white-text">Node.js Storefront; MySQL</p>
       </div>
