--- a/projects.html
+++ b/projects.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8" />
-  <meta http-equiv="X-UA-Compatible" content="IE=edge"> 
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <title>Katherine White</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
@@ -43,64 +43,62 @@
 
 
     <!-- Main Content -->
-    <!-- <div class="resp-container">
-      <div class="resp-imgs">
-    -->
 
     <div class="container">
-    <div class="carousel carousel-slider center">
+      <div class="carousel carousel-slider center">
 
-      <!-- <div class="carousel-fixed-item center">
-        <a class="btn waves-effect" id="demoBtn">DEMO</a>
-      </div> -->
+          <div class="carousel-fixed-item center">
+              <a class="btn waves-effect white grey-text darken-text-2 demoBtn">DEMO</a>
+            </div>
 
-      <div class="carousel-item white-text z-depth-3" id="one" href="https://dirkcallaway.github.io/Concerts-Cuisine/">
-        <h2>Concerts & Cuisine</h2>
-        <div class="carousel-fixed-item center">
-          <img src="assets/images/CC1.png" class="responsive-img z-depth-2" style="max-height: 320px" alt="C&C App">
+        <div class="carousel-item white-text z-depth-3" id="one" href="https://dirkcallaway.github.io/Concerts-Cuisine/">
+          <h2>Concerts & Cuisine</h2>
+          <div class="carousel-fixed-item center">
+            <img src="assets/images/CC1.png" class="responsive-img z-depth-2" style="max-height: 320px" alt="C&C App">
+          </div>
+          <p class="white-text">Collaborative Project. JS & MaterializeCSS</p>
+          <!-- <button class="btn btn-small waves-effect waves-light demoBtn" type="submit" name="action" id="CCBtn">DEMO</button> -->
         </div>
-        <p class="white-text">Collaborative Project. JS & MaterializeCSS</p>
-      </div>
 
-      <div class="carousel-item white-text z-depth-3" id="two" href="https://obscure-bastion-10259.herokuapp.com/">
-        <h2>Eat-Da-Burger</h2>
-        <div class="carousel-fixed-item center">
-          <img src="assets/images/Burger1.png" class="responsive-img z-depth-2" style="max-height: 320px" alt="Burger App">
+        <div class="carousel-item white-text z-depth-3" id="two" href="https://obscure-bastion-10259.herokuapp.com/">
+          <h2>Eat-Da-Burger</h2>
+          <div class="carousel-fixed-item center">
+            <img src="assets/images/Burger1.png" class="responsive-img z-depth-2" style="max-height: 320px" alt="Burger App">
+          </div>
+          <p class="white-text">Fullstack JS App. Veggie Friendly</p>
+          <!-- <button class="btn btn-small waves-effect waves-light demoBtn" type="submit" name="action" id="BurgBtn">DEMO</button> -->
         </div>
-        <p class="white-text">Fullstack JS App. Veggie Friendly</p>
-      </div>
 
-      <div class="carousel-item white-text z-depth-3" id="three" href="https://radiant-citadel-94515.herokuapp.com/">
-        <h2>Friend Finder</h2>
-        <div class="carousel-fixed-item center">
-          <img src="assets/images/Friend1.png" class="responsive-img z-depth-2" style="max-height: 320px" alt="FF App">
+        <div class="carousel-item white-text z-depth-3" id="three" href="https://radiant-citadel-94515.herokuapp.com/">
+          <h2>Friend Finder</h2>
+          <div class="carousel-fixed-item center">
+            <img src="assets/images/Friend1.png" class="responsive-img z-depth-2" style="max-height: 320px" alt="FF App">
+          </div>
+          <p class="white-text">Lonely? Find a Friend. Includes Dogs.</p>
+          <!-- <button class="btn btn-small waves-effect waves-light demoBtn" type="submit" name="action" id="FFBtn">DEMO</button> -->
         </div>
-        <p class="white-text">Lonely? Find a Friend. Includes Dogs.</p>
-      </div>
 
-      <div class="carousel-item white-text z-depth-3" id="four" href="https://drive.google.com/file/d/126RF6BhyMs-2c5pKn6rYWaxOYH0EE2QI/view?usp=sharing">
-        <h2>LIRI</h2>
-        <div class="carousel-fixed-item center">
-          <img src="assets/images/LIRI1.png" class="responsive-img z-depth-2" style="max-height: 320px" alt="FF App">
+        <div class="carousel-item white-text z-depth-3" id="four" href="https://drive.google.com/file/d/126RF6BhyMs-2c5pKn6rYWaxOYH0EE2QI/view?usp=sharing">
+          <h2>LIRI</h2>
+          <div class="carousel-fixed-item center">
+            <img src="assets/images/LIRI1.png" class="responsive-img z-depth-2" style="max-height: 320px" alt="FF App">
+          </div>
+          <p class="white-text">SIRI, but not; Node.js</p>
+          <!-- <button class="btn btn-small waves-effect waves-light demoBtn" type="submit" name="action" id="LIBtn">DEMO</button> -->
         </div>
-        <p class="white-text">SIRI, but not; Node.js</p>
-      </div>
 
-      <div class="carousel-item white-text z-depth-3" id="five" href="https://drive.google.com/file/d/1HI2fn3qL3xg7GWDsD899PqVRSSkCxRN7/view">
-        <h2>Bamazon</h2>
-        <div class="carousel-fixed-item center">
+        <div class="carousel-item white-text z-depth-3" id="five" href="https://drive.google.com/file/d/1HI2fn3qL3xg7GWDsD899PqVRSSkCxRN7/view ">
+          <h2>Bamazon</h2>
+          <div class="carousel-fixed-item center">
             <img src="assets/images/Bamazon1.png" class="responsive-img z-depth-2" style="max-height: 320px" alt="FF App">
           </div>
-        <p class="white-text">Node.js Storefront; MySQL</p>
+          <p class="white-text">Node.js Storefront; MySQL</p>
+          <!-- <button class="btn btn-small waves-effect waves-light demoBtn" type="submit" name="action" id="BamBtn">DEMO</button> -->
+        </div>
+
       </div>
 
-    </div>
-      <!-- </div>
-        
-    
-
-            </div> -->
-
+      <!-- <button class="btn btn-small waves-effect waves-light demoBtn" type="submit" name="action" id="CCBtn">DEMO</button> -->
 
       <!-- Floating Action Button-->
       <div class="fixed-action-btn">
@@ -171,5 +169,15 @@
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
 <script src="assets/javascript/portfolio2.js"></script>
+
+
+
+<!-- 
+https://dirkcallaway.github.io/Concerts-Cuisine/ (CC)
+https://obscure-bastion-10259.herokuapp.com/ (burger)
+https://radiant-citadel-94515.herokuapp.com/ (ff)
+https://drive.google.com/file/d/126RF6BhyMs-2c5pKn6rYWaxOYH0EE2QI/view?usp=sharing (liri)
+https://drive.google.com/file/d/1HI2fn3qL3xg7GWDsD899PqVRSSkCxRN7/view (bamazon) -->
+
 
 </html>
