added button to link to github

--- a/projects.html
+++ b/projects.html
@@ -36,6 +36,7 @@
           <li><a href="about.html" class="waves-effect" id="aboutLink">about</a></li>
           <li><a href="projects.html" class="waves-effect" id="projectsLink">projects</a></li>
           <li><a href="contact.html" class="waves-effect" id="contactLink">contact</a></li>
+          <li><a href="index.html" class="waves-effect" id="homeLink">home</a></li>
           <!-- <li><a href="index.html" class="waves-effect" id="homeLink"><i class="fas fa-home"></i></a></li> -->
         </ul>
       </div>
@@ -47,14 +48,17 @@
     <div class="container">
       <div class="carousel carousel-slider center">
 
-          <div class="carousel-fixed-item center">
-              <a class="btn waves-effect white grey-text darken-text-2 demoBtn">DEMO</a>
-            </div>
+        <!-- Demo & Github Buttons-->
+        <div class="carousel-fixed-item center">
+          <a class="btn btn-small demoBtn">DEMO</a>
+          <a class="btn btn-small gitBtn" href="https://github.com/k8blanco">GITHUB</a>
+        </div>
 
+        <!-- Carousel Items -->
         <div class="carousel-item white-text z-depth-3" id="one" href="https://dirkcallaway.github.io/Concerts-Cuisine/">
           <h2>Concerts & Cuisine</h2>
-          <div class="carousel-fixed-item center">
-            <img src="assets/images/CC1.png" class="responsive-img z-depth-2" style="max-height: 320px" alt="C&C App">
+          <div class="carousel-fixed-item center img">
+            <img src="assets/images/CC1.png" class="responsive-img z-depth-3" style="max-height: 320px" alt="C&C App">
           </div>
           <p class="white-text">Collaborative Project. JS & MaterializeCSS</p>
           <!-- <button class="btn btn-small waves-effect waves-light demoBtn" type="submit" name="action" id="CCBtn">DEMO</button> -->
@@ -62,8 +66,8 @@
 
         <div class="carousel-item white-text z-depth-3" id="two" href="https://obscure-bastion-10259.herokuapp.com/">
           <h2>Eat-Da-Burger</h2>
-          <div class="carousel-fixed-item center">
-            <img src="assets/images/Burger1.png" class="responsive-img z-depth-2" style="max-height: 320px" alt="Burger App">
+          <div class="carousel-fixed-item center img">
+            <img src="assets/images/Burger1.png" class="responsive-img z-depth-3" style="max-height: 320px" alt="Burger App">
           </div>
           <p class="white-text">Fullstack JS App. Veggie Friendly</p>
           <!-- <button class="btn btn-small waves-effect waves-light demoBtn" type="submit" name="action" id="BurgBtn">DEMO</button> -->
@@ -71,8 +75,8 @@
 
         <div class="carousel-item white-text z-depth-3" id="three" href="https://radiant-citadel-94515.herokuapp.com/">
           <h2>Friend Finder</h2>
-          <div class="carousel-fixed-item center">
-            <img src="assets/images/Friend1.png" class="responsive-img z-depth-2" style="max-height: 320px" alt="FF App">
+          <div class="carousel-fixed-item center img">
+            <img src="assets/images/Friend1.png" class="responsive-img z-depth-3" style="max-height: 320px" alt="FF App">
           </div>
           <p class="white-text">Lonely? Find a Friend. Includes Dogs.</p>
           <!-- <button class="btn btn-small waves-effect waves-light demoBtn" type="submit" name="action" id="FFBtn">DEMO</button> -->
@@ -80,8 +84,8 @@
 
         <div class="carousel-item white-text z-depth-3" id="four" href="https://drive.google.com/file/d/126RF6BhyMs-2c5pKn6rYWaxOYH0EE2QI/view?usp=sharing">
           <h2>LIRI</h2>
-          <div class="carousel-fixed-item center">
-            <img src="assets/images/LIRI1.png" class="responsive-img z-depth-2" style="max-height: 320px" alt="FF App">
+          <div class="carousel-fixed-item center img">
+            <img src="assets/images/LIRI1.png" class="responsive-img z-depth-3" style="max-height: 320px" alt="FF App">
           </div>
           <p class="white-text">SIRI, but not; Node.js</p>
           <!-- <button class="btn btn-small waves-effect waves-light demoBtn" type="submit" name="action" id="LIBtn">DEMO</button> -->
@@ -89,8 +93,8 @@
 
         <div class="carousel-item white-text z-depth-3" id="five" href="https://drive.google.com/file/d/1HI2fn3qL3xg7GWDsD899PqVRSSkCxRN7/view ">
           <h2>Bamazon</h2>
-          <div class="carousel-fixed-item center">
-            <img src="assets/images/Bamazon1.png" class="responsive-img z-depth-2" style="max-height: 320px" alt="FF App">
+          <div class="carousel-fixed-item center img">
+            <img src="assets/images/Bamazon1.png" class="responsive-img z-depth-3" style="max-height: 320px" alt="FF App">
           </div>
           <p class="white-text">Node.js Storefront; MySQL</p>
           <!-- <button class="btn btn-small waves-effect waves-light demoBtn" type="submit" name="action" id="BamBtn">DEMO</button> -->
@@ -101,11 +105,11 @@
       <!-- <button class="btn btn-small waves-effect waves-light demoBtn" type="submit" name="action" id="CCBtn">DEMO</button> -->
 
       <!-- Floating Action Button-->
-      <div class="fixed-action-btn">
+      <!-- <div class="fixed-action-btn">
         <a href="index.html" class="btn-floating home">
           <i class="large fas fa-home"></i>
         </a>
-      </div>
+      </div> -->
 
     </div>
 
