added home link. mobile-first complete for now

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
           <li><a href="about.html" class="waves-effect" id="aboutLink">about</a></li>
           <li><a href="projects.html" class="waves-effect" id="projectsLink">projects</a></li>
           <li><a href="contact.html" class="waves-effect" id="contactLink">contact</a></li>
-          <!-- <li><a href="index.html" class="waves-effect" id="homeLink"><i class="fas fa-home"></i></a></li> -->
+          <li><a href="index.html" class="waves-effect" id="homeLink">home</a></li>
         </ul>
       </div>
     </nav>
