--- a/about.html
+++ b/about.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="utf-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge"> 
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>Katherine White</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
@@ -46,52 +46,49 @@
         <div class="row">
             <div class="black hoverable z-depth-3 about-container">
                 <div class="row">
-                <div class="about-pic">
-                    <div class="col s6 offset-s3">
-                        <img src="assets/images/self-sidenav.png" alt="Katherine White" class="responsive-img circle">
+                    <div class="about-pic">
+                        <div class="col s6 m4 offset-s3 offset-m5">
+                            <img src="assets/images/self-sidenav.png" alt="Katherine White" class="responsive-img circle">
+                        </div>
                     </div>
                 </div>
-            </div>
 
-            <div class="row">
+                <!-- <div class="row"> -->
                 <div class="card-panel black" id="aboutCard">
                     <div class="row">
                         <div class="card-content" id="aboutText">
                             <p class="white-text">Katherine is a Fullstack Developer based in Denver, CO and skilled in
                                 the latest front and back-end technologies. She has an eye for design, a
-                                love for data, and a passion for lifelong learning.</p>
+                                love for data, and a passion for lifelong learning.
+                            </p>
                         </div>
                     </div>
                 </div>
-            </div>
+                <!-- </div> -->
+
+                <!--SideNav-->
+                <ul id="slide-out" class="sidenav col m2 offset-m1 sidenav-fixed">
+                    <ul class="right hide-on-med-and-down" id="navLinks">
+                        <li><a href="about.html" class="waves-effect" id="aboutLink">about</a></li>
+                        <li><a href="projects.html" class="waves-effect" id="projectsLink">projects</a></li>
+                        <li><a href="contact.html" class="waves-effect" id="contactLink">contact</a></li>
+                        <li><a href="index.html" class="waves-effect" id="homeLink">home</a></li>
+                    </ul>
+                </ul>
+
 
             </div>
         </div>
 
         <!-- Floating Action Button-->
-        <div class="fixed-action-btn">
+        <!-- <div class="fixed-action-btn">
             <a href="index.html" class="btn-floating home">
                 <i class="large fas fa-home"></i>
             </a>
-        </div>
+        </div> -->
 
 
 
-
-        </div>
-        </div>
-        <!--SideNav-->
-        <ul id="slide-out" class="sidenav sidenav-fixed black hoverable z-depth-3">
-            <ul class="right hide-on-med-and-down">
-                <li><a href="index.html" class="white-text waves-effect" id="homeLink">home</a></li>
-                <li><a href="about.html" class="white-text waves-effect" id="aboutLink">about</a></li>
-                <li><a href="projects.html" class="white-text waves-effect" id="projectsLink">projects</a></li>
-                <li><a href="contact.html" class="white-text waves-effect" id="contactLink">projects</a></li>
-                <!-- <li>
-        <div class="divider"></div>
-      </li> -->
-            </ul>
-        </ul>
 
 
 
