--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8" />
-  <meta http-equiv="X-UA-Compatible" content="IE=edge"> 
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <title>Katherine White</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
@@ -43,59 +43,57 @@
 
     <!-- Main Content -->
     <div class="row">
-
       <div class="row">
+
+        <!-- Name & title-->
         <div class="black hoverable z-depth-3 resp-container">
           <div class="resp-text">
-
-            <div class="col s12">
+            <div class="col s12 m8 offset-m2">
               <h1 class="name">katherine white</h1>
-
               <div class="row">
                 <div class="col s12">
                   <h2 class="jobTitle">Full<br>Stack<br>Developer</h2>
                 </div>
               </div>
-
             </div>
           </div>
+          
+          <!--SideNav-->
+            <ul id="slide-out" class="sidenav col m2 offset-m1 sidenav-fixed">
+              <ul class="right hide-on-med-and-down" id="navLinks">
+                <li><a href="about.html" class="waves-effect" id="aboutLink">about</a></li>
+                <li><a href="projects.html" class="waves-effect" id="projectsLink">projects</a></li>
+                <li><a href="contact.html" class="waves-effect" id="contactLink">contact</a></li>
+                <li><a href="index.html" class="waves-effect" id="homeLink">home</a></li>
+              </ul>
+            </ul>
+          
+        </div>
         </div>
       </div>
-
-      <!-- Floating Action Button-->
-      <div class="fixed-action-btn">
-        <a class="btn-floating btn-large contact">
-          <i class="large fas fa-user-plus"></i>
-        </a>
-        <ul>
-          <li><a class="btn-floating email" href="mailto:katiewhite303@gmail.com?Subject=Inquiry" target="_top"><i
-                class="far fa-envelope"></i></a></li>
-          <li><a class="btn-floating github" href="https://github.com/k8blanco" target="_blank"><i class="fab fa-github"></i></a></li>
-          <li><a class="btn-floating resume" href="https://docs.google.com/document/d/1oj4fceJ3kBA28p8bTujelqkgblZPE-_zoVXRME4rG64/edit?usp=sharing"
-              target="_blank"><i class="fas fa-file"></i></a></li>
-          <li><a class="btn-floating linkedIn" href="https://www.linkedin.com/in/katherine-white-274877a/" target="_blank"><i
-                class="fab fa-linkedin-in"></i></a></li>
-          <!-- <li><a class="btn-floating linkedIn" href="tel:+1-720-340-2659"><i class="fab fa-linkedin-in"></i></a></li> -->
-        </ul>
-      </div>
-
     </div>
 
-
-    </div>
-    </div>
-    <!--SideNav-->
-    <ul id="slide-out" class="sidenav sidenav-fixed black hoverable z-depth-3">
-      <ul class="right hide-on-med-and-down">
-        <li><a href="index.html" class="white-text waves-effect" id="homeLink">home</a></li>
-        <li><a href="about.html" class="white-text waves-effect" id="aboutLink">about</a></li>
-        <li><a href="projects.html" class="white-text waves-effect" id="projectsLink">projects</a></li>
-        <li><a href="contact.html" class="white-text waves-effect" id="contactLink">projects</a></li>
-        <!-- <li>
-        <div class="divider"></div>
-      </li> -->
+    <!-- Floating Action Button-->
+    <div class="fixed-action-btn">
+      <a class="btn-floating btn-large contact">
+        <i class="large fas fa-user-plus"></i>
+      </a>
+      <ul>
+        <li><a class="btn-floating linkedIn" href="https://www.linkedin.com/in/katherine-white-274877a/" target="_blank"><i
+              class="fab fa-linkedin-in"></i></a></li>
+        <li><a class="btn-floating resume" href="https://docs.google.com/document/d/1oj4fceJ3kBA28p8bTujelqkgblZPE-_zoVXRME4rG64/edit?usp=sharing"
+            target="_blank"><i class="fas fa-file"></i></a></li>
+        <li><a class="btn-floating github" href="https://github.com/k8blanco" target="_blank"><i class="fab fa-github"></i></a></li>
+        <li><a class="btn-floating email" href="mailto:katiewhite303@gmail.com?Subject=Inquiry" target="_top"><i class="far fa-envelope"></i></a></li>
       </ul>
-    </ul>
+    </div>
+
+    </div>
+
+
+    </div>
+    </div>
+
 
 
 
@@ -106,33 +104,6 @@
 
 
   </main>
-
-  <!--Footer-->
-  <!-- <footer class="page-footer black"> -->
-  <!-- <div class="container"> -->
-  <!-- <div class="row"> -->
-  <!-- <div class="col l6 s12">
-          <h5 class="white-text">katherine white</h5>
-        </div> -->
-  <!-- <div class="col l4 offset-l2 s12">
-          <h5 class="white-text">Links</h5>
-          <ul>
-            <li><a class="grey-text text-lighten-3" href="#!">Link 1</a></li>
-            <li><a class="grey-text text-lighten-3" href="#!">Link 2</a></li>
-            <li><a class="grey-text text-lighten-3" href="#!">Link 3</a></li>
-            <li><a class="grey-text text-lighten-3" href="#!">Link 4</a></li>
-          </ul>
-        </div> -->
-  <!-- </div> -->
-  <!-- </div> -->
-  <!-- <div class="footer-copyright"> -->
-  <!-- <div class="container">
-      © 2014 Copyright Text
-      <a class="grey-text text-lighten-4 right" href="#!">More Links</a>
-      </div> -->
-  <!-- </div> -->
-  <!-- </footer> -->
-
 
 </body>
 
