added media queries for laptop/desktop

--- a/about.html
+++ b/about.html
@@ -9,8 +9,8 @@
 
     <!--Style-->
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400|Yeseva+One" rel="stylesheet">
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.0/css/all.css" integrity="sha384-lZN37f5QGtY3VHgisS14W3ExzMWZxybE1SJSEsQp9S+oqd12jhcu+A56Ebc1zFSJ"
-        crossorigin="anonymous">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.0/css/all.css"
+        integrity="sha384-lZN37f5QGtY3VHgisS14W3ExzMWZxybE1SJSEsQp9S+oqd12jhcu+A56Ebc1zFSJ" crossorigin="anonymous">
     <link rel="stylesheet" type="text/css" media="screen" href="assets/css/reset.css" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
     <link rel="stylesheet" type="text/css" media="screen" href="assets/css/style.css" />
@@ -48,12 +48,12 @@
                 <div class="row">
                     <div class="about-pic">
                         <div class="col s6 m4 offset-s3 offset-m5">
-                            <img src="assets/images/self-sidenav.png" alt="Katherine White" class="responsive-img circle">
+                            <img src="assets/images/self-sidenav.png" alt="Katherine White"
+                                class="responsive-img circle">
                         </div>
                     </div>
                 </div>
 
-                <!-- <div class="row"> -->
                 <div class="card-panel black" id="aboutCard">
                     <div class="row">
                         <div class="card-content" id="aboutText">
@@ -64,7 +64,6 @@
                         </div>
                     </div>
                 </div>
-                <!-- </div> -->
 
                 <!--SideNav-->
                 <ul id="slide-out" class="sidenav col m2 offset-m1 sidenav-fixed">
