--- a/projects.html
+++ b/projects.html
@@ -9,8 +9,8 @@
 
   <!--Style-->
   <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400|Yeseva+One" rel="stylesheet">
-  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.0/css/all.css" integrity="sha384-lZN37f5QGtY3VHgisS14W3ExzMWZxybE1SJSEsQp9S+oqd12jhcu+A56Ebc1zFSJ"
-    crossorigin="anonymous">
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.0/css/all.css"
+    integrity="sha384-lZN37f5QGtY3VHgisS14W3ExzMWZxybE1SJSEsQp9S+oqd12jhcu+A56Ebc1zFSJ" crossorigin="anonymous">
   <link rel="stylesheet" type="text/css" media="screen" href="assets/css/reset.css" />
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
   <link rel="stylesheet" type="text/css" media="screen" href="assets/css/style.css" />
@@ -43,90 +43,88 @@
 
 
     <!-- Main Content -->
+    <div class="row">
+      <div class="black hoverable z-depth-3 project-container">
 
-    <div class="container">
-      <div class="carousel carousel-slider center">
+        <!--Carousel for Mobile-->
+        <div class="carousel carousel-slider center">
 
-        <!-- Demo & Github Buttons-->
-        <div class="carousel-fixed-item center">
-          <a class="btn btn-small demoBtn">DEMO</a>
-          <a class="btn btn-small gitBtn" href="https://github.com/k8blanco">GITHUB</a>
-        </div>
-
-        <!-- Carousel Items -->
-        <div class="carousel-item white-text z-depth-3" id="one" href="https://dirkcallaway.github.io/Concerts-Cuisine/">
-          <h2>Concerts & Cuisine</h2>
-          <div class="carousel-fixed-item center img">
-            <img src="assets/images/CC1.png" class="responsive-img z-depth-3" style="max-height: 320px" alt="C&C App">
+          <!-- Demo & Github Buttons-->
+          <div class="carousel-fixed-item center">
+            <a class="btn btn-small demoBtn">DEMO</a>
+            <a class="btn btn-small gitBtn" href="https://github.com/k8blanco">GITHUB</a>
           </div>
-          <p class="white-text">Collaborative Project. JS & MaterializeCSS</p>
-          <!-- <button class="btn btn-small waves-effect waves-light demoBtn" type="submit" name="action" id="CCBtn">DEMO</button> -->
+
+          <!-- Carousel Items -->
+          <div class="carousel-item white-text z-depth-3" id="one"
+            href="https://dirkcallaway.github.io/Concerts-Cuisine/">
+            <h2>Concerts & Cuisine</h2>
+            <div class="carousel-fixed-item center img">
+              <img src="assets/images/CC1.png" class="responsive-img z-depth-3" style="max-height: 320px" alt="C&C App">
+            </div>
+            <p class="white-text">Collaborative Project. JS & MaterializeCSS</p>
+            <!-- <button class="btn btn-small waves-effect waves-light demoBtn" type="submit" name="action" id="CCBtn">DEMO</button> -->
+          </div>
+
+          <div class="carousel-item white-text z-depth-3" id="two" href="https://obscure-bastion-10259.herokuapp.com/">
+            <h2>Eat-Da-Burger</h2>
+            <div class="carousel-fixed-item center img">
+              <img src="assets/images/Burger1.png" class="responsive-img z-depth-3" style="max-height: 320px"
+                alt="Burger App">
+            </div>
+            <p class="white-text">Fullstack JS App. Veggie Friendly</p>
+            <!-- <button class="btn btn-small waves-effect waves-light demoBtn" type="submit" name="action" id="BurgBtn">DEMO</button> -->
+          </div>
+
+          <div class="carousel-item white-text z-depth-3" id="three"
+            href="https://radiant-citadel-94515.herokuapp.com/">
+            <h2>Friend Finder</h2>
+            <div class="carousel-fixed-item center img">
+              <img src="assets/images/Friend1.png" class="responsive-img z-depth-3" style="max-height: 320px"
+                alt="FF App">
+            </div>
+            <p class="white-text">Lonely? Find a Friend. Includes Dogs.</p>
+            <!-- <button class="btn btn-small waves-effect waves-light demoBtn" type="submit" name="action" id="FFBtn">DEMO</button> -->
+          </div>
+
+          <div class="carousel-item white-text z-depth-3" id="four"
+            href="https://drive.google.com/file/d/126RF6BhyMs-2c5pKn6rYWaxOYH0EE2QI/view?usp=sharing">
+            <h2>LIRI</h2>
+            <div class="carousel-fixed-item center img">
+              <img src="assets/images/LIRI1.png" class="responsive-img z-depth-3" style="max-height: 320px"
+                alt="FF App">
+            </div>
+            <p class="white-text">SIRI, but not; Node.js</p>
+            <!-- <button class="btn btn-small waves-effect waves-light demoBtn" type="submit" name="action" id="LIBtn">DEMO</button> -->
+          </div>
+
+          <div class="carousel-item white-text z-depth-3" id="five"
+            href="https://drive.google.com/file/d/1HI2fn3qL3xg7GWDsD899PqVRSSkCxRN7/view ">
+            <h2>Bamazon</h2>
+            <div class="carousel-fixed-item center img">
+              <img src="assets/images/Bamazon1.png" class="responsive-img z-depth-3" style="max-height: 320px"
+                alt="FF App">
+            </div>
+            <p class="white-text">Node.js Storefront; MySQL</p>
+            <!-- <button class="btn btn-small waves-effect waves-light demoBtn" type="submit" name="action" id="BamBtn">DEMO</button> -->
+          </div>
+
         </div>
 
-        <div class="carousel-item white-text z-depth-3" id="two" href="https://obscure-bastion-10259.herokuapp.com/">
-          <h2>Eat-Da-Burger</h2>
-          <div class="carousel-fixed-item center img">
-            <img src="assets/images/Burger1.png" class="responsive-img z-depth-3" style="max-height: 320px" alt="Burger App">
-          </div>
-          <p class="white-text">Fullstack JS App. Veggie Friendly</p>
-          <!-- <button class="btn btn-small waves-effect waves-light demoBtn" type="submit" name="action" id="BurgBtn">DEMO</button> -->
-        </div>
-
-        <div class="carousel-item white-text z-depth-3" id="three" href="https://radiant-citadel-94515.herokuapp.com/">
-          <h2>Friend Finder</h2>
-          <div class="carousel-fixed-item center img">
-            <img src="assets/images/Friend1.png" class="responsive-img z-depth-3" style="max-height: 320px" alt="FF App">
-          </div>
-          <p class="white-text">Lonely? Find a Friend. Includes Dogs.</p>
-          <!-- <button class="btn btn-small waves-effect waves-light demoBtn" type="submit" name="action" id="FFBtn">DEMO</button> -->
-        </div>
-
-        <div class="carousel-item white-text z-depth-3" id="four" href="https://drive.google.com/file/d/126RF6BhyMs-2c5pKn6rYWaxOYH0EE2QI/view?usp=sharing">
-          <h2>LIRI</h2>
-          <div class="carousel-fixed-item center img">
-            <img src="assets/images/LIRI1.png" class="responsive-img z-depth-3" style="max-height: 320px" alt="FF App">
-          </div>
-          <p class="white-text">SIRI, but not; Node.js</p>
-          <!-- <button class="btn btn-small waves-effect waves-light demoBtn" type="submit" name="action" id="LIBtn">DEMO</button> -->
-        </div>
-
-        <div class="carousel-item white-text z-depth-3" id="five" href="https://drive.google.com/file/d/1HI2fn3qL3xg7GWDsD899PqVRSSkCxRN7/view ">
-          <h2>Bamazon</h2>
-          <div class="carousel-fixed-item center img">
-            <img src="assets/images/Bamazon1.png" class="responsive-img z-depth-3" style="max-height: 320px" alt="FF App">
-          </div>
-          <p class="white-text">Node.js Storefront; MySQL</p>
-          <!-- <button class="btn btn-small waves-effect waves-light demoBtn" type="submit" name="action" id="BamBtn">DEMO</button> -->
-        </div>
+        <!--SideNav-->
+        <ul id="slide-out" class="sidenav col m2 offset-m1 sidenav-fixed">
+          <ul class="right hide-on-med-and-down" id="navLinks">
+            <li><a href="about.html" class="waves-effect" id="aboutLink">about</a></li>
+            <li><a href="projects.html" class="waves-effect" id="projectsLink">projects</a></li>
+            <li><a href="contact.html" class="waves-effect" id="contactLink">contact</a></li>
+            <li><a href="index.html" class="waves-effect" id="homeLink">home</a></li>
+          </ul>
+        </ul>
 
       </div>
-
-      <!-- <button class="btn btn-small waves-effect waves-light demoBtn" type="submit" name="action" id="CCBtn">DEMO</button> -->
-
-      <!-- Floating Action Button-->
-      <!-- <div class="fixed-action-btn">
-        <a href="index.html" class="btn-floating home">
-          <i class="large fas fa-home"></i>
-        </a>
-      </div> -->
-
     </div>
 
 
-    </div>
-    </div>
-    <!--SideNav-->
-    <ul id="slide-out" class="sidenav sidenav-fixed black hoverable z-depth-3">
-      <ul class="right hide-on-med-and-down">
-        <li><a href="index.html" class="white-text waves-effect" id="homeLink">home</a></li>
-        <li><a href="about.html" class="white-text waves-effect" id="aboutLink">about</a></li>
-        <li><a href="projects.html" class="white-text waves-effect" id="projectsLink">projects</a></li>
-        <li><a href="contact.html" class="white-text waves-effect" id="contactLink">projects</a></li>
-        <!-- <li>
-        <div class="divider"></div>
-      </li> -->
-      </ul>
-    </ul>
 
 
 
