fixed desktop carousel links

--- a/projects.html
+++ b/projects.html
@@ -62,7 +62,7 @@
             <div class="carousel-fixed-item center img">
               <img src="assets/images/CC1.png" class="responsive-img z-depth-3" style="max-height: 320px" alt="C&C App">
             </div>
-            <p class="white-text">Collaborative Project. JS & MaterializeCSS</p>
+            <!-- <p class="white-text">Collaborative Project. JS & MaterializeCSS</p> -->
             <!-- <button class="btn btn-small waves-effect waves-light demoBtn" type="submit" name="action" id="CCBtn">DEMO</button> -->
           </div>
 
