added CC modal to projects desktop

--- a/contact.html
+++ b/contact.html
@@ -54,14 +54,14 @@
                             <!--Contact Buttons-->
                             <div class="contact-buttons">
                                 <div class="col s9 offset-s3">
-                                    <a class="btn-floating github" href="https://github.com/k8blanco" target="_blank"><i
+                                    <a class="btn-floating btn-large hvr-bob github" href="https://github.com/k8blanco" target="_blank"><i
                                             class="fab fa-github"></i></a></li>
-                                    <a class="btn-floating email" href="mailto:katiewhite303@gmail.com?Subject=Inquiry"
+                                    <a class="btn-floating btn-large hvr-bob email" href="mailto:katiewhite303@gmail.com?Subject=Inquiry"
                                         target="_top"><i class="far fa-envelope"></i></a></li>
-                                    <a class="btn-floating linkedIn"
+                                    <a class="btn-floating btn-large hvr-bob linkedIn"
                                         href="https://www.linkedin.com/in/katherine-white-274877a/" target="_blank"><i
                                             class="fab fa-linkedin-in"></i></a></li>
-                                    <a class="btn-floating resume"
+                                    <a class="btn-floating btn-large hvr-bob resume"
                                         href="https://docs.google.com/document/d/1oj4fceJ3kBA28p8bTujelqkgblZPE-_zoVXRME4rG64/edit?usp=sharing"
                                         target="_blank"><i class="fas fa-file"></i></a></li>
                                 </div>
