--- a/index.html
+++ b/index.html
@@ -79,12 +79,12 @@
         <i class="large fas fa-user-plus"></i>
       </a>
       <ul>
-        <li><a class="btn-floating linkedIn" href="https://www.linkedin.com/in/katherine-white-274877a/" target="_blank"><i
+        <li><a class="btn-floating hvr-bob linkedIn" href="https://www.linkedin.com/in/katherine-white-274877a/" target="_blank"><i
               class="fab fa-linkedin-in"></i></a></li>
-        <li><a class="btn-floating resume" href="https://docs.google.com/document/d/1oj4fceJ3kBA28p8bTujelqkgblZPE-_zoVXRME4rG64/edit?usp=sharing"
+        <li><a class="btn-floating hvr-bob resume" href="https://docs.google.com/document/d/1oj4fceJ3kBA28p8bTujelqkgblZPE-_zoVXRME4rG64/edit?usp=sharing"
             target="_blank"><i class="fas fa-file"></i></a></li>
-        <li><a class="btn-floating github" href="https://github.com/k8blanco" target="_blank"><i class="fab fa-github"></i></a></li>
-        <li><a class="btn-floating email" href="mailto:katiewhite303@gmail.com?Subject=Inquiry" target="_top"><i class="far fa-envelope"></i></a></li>
+        <li><a class="btn-floating hvr-bob github" href="https://github.com/k8blanco" target="_blank"><i class="fab fa-github"></i></a></li>
+        <li><a class="btn-floating hvr-bob email" href="mailto:katiewhite303@gmail.com?Subject=Inquiry" target="_top"><i class="far fa-envelope"></i></a></li>
       </ul>
     </div>
 
