--- a/projects.html
+++ b/projects.html
@@ -46,8 +46,8 @@
     <div class="row">
       <div class="black hoverable z-depth-3 project-container">
 
-        <!--Carousel for Mobile-->
-        <div class="carousel carousel-slider center">
+        <!--Carousel for Mobile & Tablet-->
+        <div class="carousel carousel-slider center hide-on-large-only">
 
           <!-- Demo & Github Buttons-->
           <div class="carousel-fixed-item center">
@@ -62,7 +62,7 @@
             <div class="carousel-fixed-item center img">
               <img src="assets/images/CC1.png" class="responsive-img z-depth-3" style="max-height: 320px" alt="C&C App">
             </div>
-            <!-- <p class="white-text">Collaborative Project. JS & MaterializeCSS</p> -->
+            <p class="white-text">Collaborative Project. JS & MaterializeCSS</p>
             <!-- <button class="btn btn-small waves-effect waves-light demoBtn" type="submit" name="action" id="CCBtn">DEMO</button> -->
           </div>
 
@@ -111,6 +111,39 @@
 
         </div>
 
+        <!--Projects List for Desktop-->
+        <div class="resp-container hide-on-med-and-down">
+          <div class="resp-text">
+            <div class="icons">
+
+              <div class="row">
+                <!--C&C-->
+                <img class="modal-trigger hvr-bob" data-target="modal1" src="assets/images/icons-01.png" id="ccIcon"
+                  style="max-height: 150px">
+                <!--FF-->
+                <img class="modal-trigger hvr-bob" data-target="modal2" src="assets/images/icons-02.png" id="ffIcon"
+                  style="max-height: 150px">
+                <!--BURGER-->
+                <img class="modal-trigger hvr-bob" data-target="modal3" src="assets/images/icons-03.png" id="burgIcon"
+                  style="max-height: 150px">
+              </div>
+
+              <div class="row">
+                <!--BOOK-->
+                <img class="modal-trigger hvr-bob" data-target="modal4" src="assets/images/icons-04.png" id="bookIcon"
+                  style="max-height: 150px">
+                <!--BAMAZON-->
+                <img class="modal-trigger hvr-bob" data-target="modal5" src="assets/images/icons-05.png" id="bamIcon"
+                  style="max-height: 150px">
+                <!--LIRI-->
+                <img class="modal-trigger hvr-bob" data-target="modal6" src="assets/images/icons-06.png" id="liriIcon"
+                  style="max-height: 150px">
+              </div>
+
+            </div>
+          </div>
+        </div>
+
         <!--SideNav-->
         <ul id="slide-out" class="sidenav col m2 offset-m1 sidenav-fixed">
           <ul class="right hide-on-med-and-down" id="navLinks">
@@ -124,6 +157,45 @@
       </div>
     </div>
 
+    <!--Modals-->
+
+    <!--C&C-->
+    <div id="modal1" class="modal">
+      <div class="modal-content">
+        <div class="card horizontal col s8 black white-text projectCard">
+
+          <div class="card-image" style="max-width: 50%">
+            <img src="assets/images/CC1.png">
+          </div>
+
+          <div class="card-stacked">
+            <div class="card-content">
+              <h4 class="center">Concerts & Cuisine</h4>
+              <p class="white-text">Plan a musical night out with this sleek and intuitive app!
+                Enter your zipcode and let us do the planning for you - we'll find nearby concerts and
+                and give you a list of delicious restaurants near the concert venue of your choice. Built
+                collaboratively with a remote team</p><br>
+
+
+              <ul class="center">
+                <h5 class="center">Technologies:</h5>
+                <li>JavaScript/jQuery</li>
+                <li>Google Material Design/Materialize CSS</li>
+                <li>MapQuest, Songkick, & Zomato APIs</li>
+                <li>Git/Github</li>
+              </ul>
+
+              <div class="center-align">
+                <a href="https://dirkcallaway.github.io/Concerts-Cuisine/" class="btn-flat btn-small" id="demoMe">Demo
+                  <i class="fas fa-laptop-code"></i></a>
+                <a href="https://github.com/k8blanco/Concerts-Cuisine" class="btn-flat btn-small center"
+                  id="githubMe">Github <i class="fab fa-github"></i></a>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
 
 
 
