Burger desktop modal

--- a/projects.html
+++ b/projects.html
@@ -199,43 +199,80 @@
 
     <!--FF-->
     <div id="modal2" class="modal">
-        <div class="modal-content">
-          <div class="card horizontal col s8 black white-text projectCard">
-  
-            <div class="card-image" style="max-width: 50%">
-              <img src="assets/images/Friend1.png">
-            </div>
-  
-            <div class="card-stacked">
-              <div class="card-content">
-                <h4 class="center">Friend Finder</h4>
-                <p class="white-text">Need a friend?  We'll get you a friend.  Fill out a short survey on your preferences and we'll find you your best match! Includes dogs, of course.</p><br>
-  
-  
-                <ul class="center">
-                  <h5 class="center">Technologies:</h5>
-                  <li>Node.js</li>
-                  <li>Express</li>
-                  <li>JavaScript</li>
-                  <li>jQuery</li>
-                  <li>Materialize CSS</li>
-                  <li>Heroku</li>
-                  <li>Git/Github</li>
-                </ul>
-  
-                <div class="center-align">
-                  <a href="https://radiant-citadel-94515.herokuapp.com/ " class="btn-flat btn-small" id="demoMe">Demo
-                    <i class="fas fa-laptop-code"></i></a>
-                  <a href="https://github.com/k8blanco/FriendFinder" class="btn-flat btn-small center"
-                    id="githubMe">Github <i class="fab fa-github"></i></a>
-                </div>
+      <div class="modal-content">
+        <div class="card horizontal col s8 black white-text projectCard">
+
+          <div class="card-image" style="max-width: 50%">
+            <img src="assets/images/Friend1.png">
+          </div>
+
+          <div class="card-stacked">
+            <div class="card-content">
+              <h4 class="center">Friend Finder</h4>
+              <p class="white-text">Need a friend? We'll get you a friend. Fill out a short survey on your preferences
+                and we'll find you your best match! Includes dogs, of course.</p><br>
+
+
+              <ul class="center">
+                <h5 class="center">Technologies:</h5>
+                <li>Node.js</li>
+                <li>Express</li>
+                <li>JavaScript</li>
+                <li>jQuery</li>
+                <li>Materialize CSS</li>
+                <li>Heroku</li>
+                <li>Git/Github</li>
+              </ul>
+
+              <div class="center-align">
+                <a href="https://radiant-citadel-94515.herokuapp.com/ " class="btn-flat btn-small" id="demoMe">Demo
+                  <i class="fas fa-laptop-code"></i></a>
+                <a href="https://github.com/k8blanco/FriendFinder" class="btn-flat btn-small center"
+                  id="githubMe">Github <i class="fab fa-github"></i></a>
               </div>
             </div>
           </div>
         </div>
       </div>
-  
+    </div>
 
+    <!--BURGER-->
+    <div id="modal3" class="modal">
+      <div class="modal-content">
+        <div class="card horizontal col s8 black white-text projectCard">
+
+          <div class="card-image" style="max-width: 50%">
+            <img src="assets/images/Burger1.png">
+          </div>
+
+          <div class="card-stacked">
+            <div class="card-content">
+              <h4 class="center">Eat-Da-Burger!</h4>
+              <p class="white-text">Eat a burger, add a burger, and eat a burger again! A deployed Fullstack App
+                showcasing front and back-end integration. Veggie friendly.</p><br>
+
+
+              <ul class="center">
+                <h5 class="center">Technologies:</h5>
+                <li>MySQL</li>
+                <li>Node.js</li>
+                <li>Express</li>
+                <li>Handlebars</li>
+                <li>MVC</li>
+                <li>Heroku</li>
+              </ul>
+
+              <div class="center-align">
+                <a href="https://radiant-citadel-94515.herokuapp.com/ " class="btn-flat btn-small" id="demoMe">Demo
+                  <i class="fas fa-laptop-code"></i></a>
+                <a href="https://github.com/k8blanco/FriendFinder" class="btn-flat btn-small center"
+                  id="githubMe">Github <i class="fab fa-github"></i></a>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
 
 
 
