updated links for Burger modal

--- a/projects.html
+++ b/projects.html
@@ -263,9 +263,9 @@
               </ul>
 
               <div class="center-align">
-                <a href="https://radiant-citadel-94515.herokuapp.com/ " class="btn-flat btn-small" id="demoMe">Demo
+                <a href="https://obscure-bastion-10259.herokuapp.com/" class="btn-flat btn-small" id="demoMe">Demo
                   <i class="fas fa-laptop-code"></i></a>
-                <a href="https://github.com/k8blanco/FriendFinder" class="btn-flat btn-small center"
+                <a href="https://github.com/k8blanco/burger" class="btn-flat btn-small center"
                   id="githubMe">Github <i class="fab fa-github"></i></a>
               </div>
             </div>
