bookMatch desktop modal

--- a/projects.html
+++ b/projects.html
@@ -265,8 +265,47 @@
               <div class="center-align">
                 <a href="https://obscure-bastion-10259.herokuapp.com/" class="btn-flat btn-small" id="demoMe">Demo
                   <i class="fas fa-laptop-code"></i></a>
-                <a href="https://github.com/k8blanco/burger" class="btn-flat btn-small center"
-                  id="githubMe">Github <i class="fab fa-github"></i></a>
+                <a href="https://github.com/k8blanco/burger" class="btn-flat btn-small center" id="githubMe">Github <i
+                    class="fab fa-github"></i></a>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <!--BOOKMATCH-->
+    <div id="modal4" class="modal">
+      <div class="modal-content">
+        <div class="card horizontal col s8 black white-text projectCard">
+
+          <div class="card-image" style="max-width: 50%">
+            <img src="assets/images/bookMatch-02.png">
+          </div>
+
+          <div class="card-stacked">
+            <div class="card-content">
+              <h4 class="center">bookMatch</h4>
+              <p class="white-text">Find your next great read!  A powerful Fullstack App that gives you 
+                recs based on your fav book or author, with a pleasing and fun UI that you'll come back to
+                again and again.
+              </p><br>
+
+
+              <ul class="center">
+                <h5 class="center">Technologies:</h5>
+                <li>Sequelize/MySQL</li>
+                <li>Node.js, Express, Handlebars</li>
+                <li>Materialize CSS & Sass</li>
+                <li>Heroku</li>
+                <li>TasteDive, GoogleBooks, Embedded Viewer APIs</li>
+              </ul>
+
+              <div class="center-align">
+                <a href="https://fast-beyond-47318.herokuapp.com/" class="btn-flat btn-small" id="demoMe">Demo
+                  <i class="fas fa-laptop-code"></i></a>
+                <a href="https://github.com/k8blanco/bookMatch" class="btn-flat btn-small center" id="githubMe">Github
+                  <i class="fab fa-github"></i></a>
               </div>
             </div>
           </div>
