--- a/projects.html
+++ b/projects.html
@@ -313,6 +313,42 @@
       </div>
     </div>
 
+    <!--LIRI-->
+    <div id="modal6" class="modal">
+        <div class="modal-content">
+          <div class="card horizontal col s8 black white-text projectCard">
+  
+            <div class="card-image" style="max-width: 50%">
+              <img src="assets/images/LIRI1.png">
+            </div>
+  
+            <div class="card-stacked">
+              <div class="card-content">
+                <h4 class="center">LIRI</h4>
+                <p class="white-text">A Language Interpretation & Recognition Interface; LIRI takes user
+                  input from a series of commands.  Interfaces with various APIs and uses multiple Node packagaes. 
+                  One of the best features is its scalability - it can be greatly (and easily!) expanded!
+                </p><br>
+  
+  
+                <ul class="center">
+                  <h5 class="center">Technologies:</h5>
+                  <li>Node.js</li>
+                  <li>Inquirer, Axios, Spotify, Moment.js & FS</li>
+                  <li>Colors node package for a fun interface</li>
+                </ul>
+  
+                <div class="center-align">
+                  <a href="https://drive.google.com/file/d/126RF6BhyMs-2c5pKn6rYWaxOYH0EE2QI/view?usp=sharing" class="btn-flat btn-small" id="demoMe">Demo
+                    <i class="fas fa-laptop-code"></i></a>
+                  <a href="https://github.com/k8blanco/liri" class="btn-flat btn-small center" id="githubMe">Github
+                    <i class="fab fa-github"></i></a>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
 
 
 
