Bamazon desktop modal

--- a/projects.html
+++ b/projects.html
@@ -313,6 +313,43 @@
       </div>
     </div>
 
+    <!--BAMAZON-->
+    <div id="modal5" class="modal">
+        <div class="modal-content">
+          <div class="card horizontal col s8 black white-text projectCard">
+  
+            <div class="card-image" style="max-width: 50%">
+              <img src="assets/images/Bamazon1.png">
+            </div>
+  
+            <div class="card-stacked">
+              <div class="card-content">
+                <h4 class="center">Bamazon</h4>
+                <p class="white-text">An Amazon-esque storefront that takes orders from customers, updates inventory, and totals sales. 
+                  Includes Customer, Manager, and Supervisor interfaces and talks to MySQL DB.
+                </p><br>
+  
+  
+                <ul class="center">
+                  <h5 class="center">Technologies:</h5>
+                  <li>MySQL</li>
+                  <li>Node.js</li>
+                  <li>MySQL, Inquirer, CLI-Table, & Colors packages</li>
+                </ul>
+  
+                <div class="center-align">
+                  <a href="https://drive.google.com/file/d/1HI2fn3qL3xg7GWDsD899PqVRSSkCxRN7/view" class="btn-flat btn-small" id="demoMe">Demo
+                    <i class="fas fa-laptop-code"></i></a>
+                  <a href="https://github.com/k8blanco/bamazon" class="btn-flat btn-small center" id="githubMe">Github
+                    <i class="fab fa-github"></i></a>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+
+
     <!--LIRI-->
     <div id="modal6" class="modal">
         <div class="modal-content">
